Set the RTP payload type to fixed values for audio/video streams. Fugu receivers expect specific RTP payload type for audio/video streams. This constraint should be removed from receiver codes. For now, sender will override the payload type with the required value in each RTP packet.

BUG=631828

Review-Url: https://codereview.chromium.org/2179943004
Cr-Commit-Position: refs/heads/master@{#408038}

Former-commit-id: cae9d55680876b8c22acdd6c3e3cd38a57d7fc14